tests/semantic_cases/valid/writeln_no_arg.ob0
MODULE Main;
BEGIN
  WriteLn()
END Main.
