tests/semantic_cases/invalid/writeint_string_literal.ob0
MODULE Main;
BEGIN
  WriteInt("Hello")
END Main.
